# generalized-map

./: CONTRIBUTING.md  Cargo.toml  README.md  dart_compression.xlsx  runplot.bat
src/: array_serialize.rs  attribute.rs  dart.rs  index.rs  index_allocator.rs  inspect.rs  iterators.rs  lib.rs  main.rs  orbits.rs  output.rs
src/gmap/: attributes.rs  chamfer.rs  close_boundary.rs  contract.rs  darts.rs  extrude.rs  insert.rs  links.rs  marks.rs  mod.rs  remove.rs  sew.rs  shapes.rs  shapes_embedded.rs  stats.rs  triangulate.rs
visual/: map.json  plot.py
