[package]
name = "generalized-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2"
lazy_static = "1.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
