[package]
name = "generalized-map"
version = "0.1.0"
edition = "2021"
license = "MIT"
author = "Evgenii Nekhoroshev evgnekhoroshev@gmail.com"
repository = "https://github.com/evnekdev/generalized-map"
description = "A Rust implementation of generalized maps (n-dimensional combinatorial topology) for representing meshes, graphs, and complex geometric structures."
keywords = ["topology", "mesh", "geometry", "graph", "combinatorics"]
categories = ["data-structures","algorithms","graphics","science","mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs = "1.2"
lazy_static = "1.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
